fixed overflow-y on mobile

--- a/styles/landingPage.scss
+++ b/styles/landingPage.scss
@@ -43,7 +43,9 @@ button:hover {
 @media (max-width: 480px) {
     .selections {
         flex-direction: column;
-
+        button {
+            width: 100%;
+        }
         .button-container {
             background-position: 50% 66%;
         }
